--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d6fcf2"
     tools:context="com.example.laurageerars.laurageerarsfinalfinalapp.MainActivity">
 
     <TextView
@@ -50,7 +51,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <Button
             android:id="@+id/register_button"
@@ -58,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:layout_weight="1"
+            android:background="#47ffd0"
             android:text="Registreer"/>
 
         <Button
@@ -66,6 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:layout_weight="1"
+            android:background="#47ffd0"
             android:text="Log in"/>
 
     </LinearLayout>
