--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#d6fcf2"
     tools:context="com.example.laurageerars.laurageerarsfinalfinalapp.RegisterActivity">
 
     <TextView
@@ -52,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:layout_weight="1"
+            android:background="#47ffd0"
             android:text="Ga Terug"/>
 
         <Button
@@ -60,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:layout_weight="1"
+            android:background="#47ffd0"
             android:text="Registreer"/>
 
     </LinearLayout>
