--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -5,7 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#d6fcf2"
+    android:background="#ffffff"
     tools:context="com.example.laurageerars.laurageerarsfinalfinalapp.HomepageActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="94dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/rijkslogo"
+            android:layout_width="match_parent"
+            android:layout_height="116dp"
+            android:layout_margin="5dp"
+            app:srcCompat="@drawable/rijks" />
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/test"/>
+
+    <ListView
+        android:id="@+id/ListViewCollection"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
+        android:layout_weight="2"/>
+
+
 
 </LinearLayout>
