--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,8 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#d6fcf2"
+    android:background="#ffffff"
     tools:context="com.example.laurageerars.laurageerarsfinalfinalapp.RegisterActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="94dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/rijkslogo"
+            android:layout_width="match_parent"
+            android:layout_height="116dp"
+            android:layout_margin="5dp"
+            app:srcCompat="@drawable/rijks" />
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
@@ -53,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:layout_weight="1"
-            android:background="#47ffd0"
+            android:background="#ededed"
             android:text="Ga Terug"/>
 
         <Button
@@ -62,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:layout_weight="1"
-            android:background="#47ffd0"
+            android:background="#ededed"
             android:text="Registreer"/>
 
     </LinearLayout>
