--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#ffffff"
-    tools:context="com.example.laurageerars.laurageerarsfinalfinalapp.HomepageActivity">
+    android:orientation="vertical"
+    tools:context="com.example.laurageerars.laurageerarsfinalfinalapp.ProfileActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,27 +32,17 @@
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/test"/>
-
-    <TextView
-        android:id="@+id/appbeschrijving"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="Bekijk de collectie van het Rijksmuseum, Amsterdam."
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textSize="18sp" />
-
     <ListView
-        android:id="@+id/ListViewCollection"
+        android:id="@+id/favorietlijst"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="401dp"></ListView>
+
+    <Button
+        android:id="@+id/logout_button"
+        android:layout_width="344dp"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:layout_weight="2"/>
-
-
+        android:background="#ededed"
+        android:text="UITLOGGEN" />
 
 </LinearLayout>
