--- a/app/src/main/res/layout/activity_other_favorites.xml
+++ b/app/src/main/res/layout/activity_other_favorites.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
     android:orientation="vertical"
-    tools:context="com.example.laurageerars.laurageerarsfinalfinalapp.ProfileActivity">
+    android:background="#ffffff"
+    tools:context="com.example.laurageerars.laurageerarsfinalfinalapp.OtherFavoritesActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,25 +32,8 @@
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/favorietlijst"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="348dp"></ListView>
-
-    <Button
-        android:id="@+id/otherfavoritesbutton"
-        android:layout_width="match_parent"
-        android:layout_margin="10dp"
-        android:layout_height="38dp"
-        android:background="#ededed"
-        android:text="ANDERE FAVORIETEN BEKIJKEN" />
-
-    <Button
-        android:id="@+id/logout_button"
-        android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:layout_margin="10dp"
-        android:background="#ededed"
-        android:text="UITLOGGEN" />
-
+        android:layout_height="wrap_content"
+        android:text="HIER KOMEN DE FAVORIETEN VAN ANDEREN!!!"/>
 </LinearLayout>
