--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -32,6 +32,12 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="favorieten"
+        android:id="@+id/favorietentest"/>
+
     <ListView
         android:id="@+id/favorietlijst"
         android:layout_width="match_parent"
