--- a/app/src/main/res/layout/activity_other_favorites.xml
+++ b/app/src/main/res/layout/activity_other_favorites.xml
@@ -35,5 +35,15 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="HIER KOMEN DE FAVORIETEN VAN ANDEREN!!!"/>
+        android:layout_margin="20dp"
+        android:text="Bekijk hier iedereen zijn/haar favorieten!"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="18sp" />
+
+    <ListView
+        android:id="@+id/favorietanderenlijst"
+        android:layout_width="match_parent"
+        android:layout_height="348dp"></ListView>
+
+
 </LinearLayout>
