--- a/app/src/main/res/layout/activity_favo_other_list.xml
+++ b/app/src/main/res/layout/activity_favo_other_list.xml
@@ -4,10 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
     android:orientation="vertical"
-    tools:context="com.example.laurageerars.laurageerarsfinalfinalapp.ProfileActivity">
-
+    tools:context="com.example.laurageerars.laurageerarsfinalfinalapp.FavoOtherListActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="94dp"
@@ -32,34 +30,8 @@
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:id="@+id/person"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="Bekijk hier jouw favorieten!"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textSize="18sp" />
-
     <ListView
-        android:id="@+id/favorietlijst"
+        android:id="@+id/favolijst"
         android:layout_width="match_parent"
-        android:layout_height="302dp"></ListView>
-
-    <Button
-        android:id="@+id/otherfavoritesbutton"
-        android:layout_width="match_parent"
-        android:layout_margin="10dp"
-        android:layout_height="38dp"
-        android:background="#ededed"
-        android:text="ANDERE FAVORIETEN BEKIJKEN" />
-
-    <Button
-        android:id="@+id/logout_button"
-        android:layout_width="match_parent"
-        android:layout_height="43dp"
-        android:layout_margin="10dp"
-        android:background="#ededed"
-        android:text="UITLOGGEN" />
-
+        android:layout_height="348dp"></ListView>
 </LinearLayout>
